--- a/package.json
+++ b/package.json
@@ -38,5 +38,17 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.3.0.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TasmiaZerin1128/mini-Facebook.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TasmiaZerin1128/mini-Facebook/issues"
+  },
+  "homepage": "https://github.com/TasmiaZerin1128/mini-Facebook#readme"
 }
