--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.1"
+    "mongoose": "^6.4.1",
+    "node-localstorage": "^2.2.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
