--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "jsonwebtoken": "^8.5.1",
     "mdb-ui-kit": "^4.2.0",
     "moment": "^2.29.3",
     "rxjs": "~7.5.0",
