--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 DB_CONNECT = mongodb+srv://AssasinTas:tasmia614@cluster0.cd7arsd.mongodb.net/?retryWrites=true&w=majority
 DB_CONNECT_LOCAL = mongodb://localhost:27017/miniFB
 TOKEN_SECRET = dhjafgiuefokmand
+
+ACCESS_KEY = w6cNXuAj9BGXOCyo
+SECRET_KEY = Vyl6KQoQzGJWT28ngX2T0s9SwjjzWtMV
