--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "minio": "^7.0.29",
     "mongoose": "^6.4.4",
+    "multer": "^1.4.5-lts.1",
     "node-localstorage": "^2.2.1"
   },
   "devDependencies": {
