--- a/backend/authentication/.env
+++ b/backend/authentication/.env
@@ -1,5 +1,5 @@
 DB_CONNECT = mongodb+srv://AssasinTas:tasmia614@cluster0.cd7arsd.mongodb.net/?retryWrites=true&w=majority
-DB_CONNECT_LOCAL = mongodb://localhost:27017/miniFB
+DB_CONNECT_LOCAL = mongodb://localhost:27017/miniFBauth
 TOKEN_SECRET = dhjafgiuefokmand
 
 ACCESS_KEY = w6cNXuAj9BGXOCyo
