--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,9 +5,9 @@ services:
         image: nginx
         restart: unless-stopped
         ports:
-            - 1000:9001
+            - 9001:9001
         volumes:
-            - ./nginx.conf:/etc/nginx/sites-enabled/app
+            - ./nginx.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - authservice
             - postservice
@@ -16,49 +16,70 @@ services:
     authservice:
         build: ./authentication
         restart: unless-stopped
+        environment:
+            DB_URL: mongodb://authdb:27017/authservice
         depends_on:
             - authdb
 
     authdb:
         image: mongo
         ports:
-            - 30000:30000
+            - 27018:27017
         restart: unless-stopped
         volumes:
-            - /mongo:/data/db
+            - /auth:/data/db
 
     postservice:
         build: ./post
         restart: unless-stopped
+        environment:
+            DB_URL: mongodb://postdb:27017/postservice
         depends_on:
+            - authservice
             - postdb
 
     postdb:
         image: mongo
         ports:
-            - 30001:30001
+            - 27019:27017
         restart: unless-stopped
         volumes:
-            - /mongo:/data/db
+            - /post:/data/db
 
     storyservice:
         build: ./story
         restart: unless-stopped
+        environment:
+            DB_URL: mongodb://storydb:27017/storyservice
         depends_on:
+            - authservice
             - storydb
             - storyobjectdb
 
     storydb:
         image: mongo
         ports:
-            - 30002:30002
+            - 27020:27017
         volumes:
-            - /mongo:/data/db
+            - /story:/data/db
         restart: unless-stopped
 
     storyobjectdb:
         image: minio/minio:latest
         environment:
-            - MINIO_ACCESS_KEY=w6cNXuAj9BGXOCyo
-            - MINIO_SECRET_KEY=Vyl6KQoQzGJWT28ngX2T0s9SwjjzWtMV
-        command: server --address 127.0.0.1:9000 /data
+            - MINIO_ROOT_USER=w6cNXuAj9BGXOCyo
+            - MINIO_ROOT_PASSWORD=Vyl6KQoQzGJWT28ngX2T0s9SwjjzWtMV
+        command: server --address 0.0.0.0:9000 /data
+
+    mc:
+        image: minio/mc:latest
+        depends_on:
+            - storyobjectdb
+        entrypoint: >
+            /bin/sh -c "
+            /usr/bin/mc config host add myminio http://minio:9000 w6cNXuAj9BGXOCyo Vyl6KQoQzGJWT28ngX2T0s9SwjjzWtMV;
+            /usr/bin/mc rm -r --force myminio/minifb;
+            /usr/bin/mc mb myminio/minifb;
+            /usr/bin/mc policy set public myminio/minifb;
+            exit 0;
+            "
