--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,23 @@ services:
         ports:
             - 100:100
         volumes:
-            - ./nginx.conf:/etc/nginx/conf.d/default.conf
+            - ./backend/nginx.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - authservice
             - postservice
             - storyservice
 
+    frontend:
+        container_name: frontend
+        build: ./frontend
+        restart: unless-stopped
+        depends_on:
+            - nginx
+        network_mode: host
+
     authservice:
         container_name: authservice
-        build: ./authentication
+        build: ./backend/authentication
         restart: unless-stopped
         environment:
             DB_URL: mongodb://authdb:27017/authservice
@@ -34,7 +42,7 @@ services:
 
     postservice:
         container_name: postservice
-        build: ./post
+        build: ./backend/post
         restart: unless-stopped
         environment:
             DB_URL: mongodb://postdb:27017/postservice
@@ -53,7 +61,7 @@ services:
 
     storyservice:
         container_name: storyservice
-        build: ./story
+        build: ./backend/story
         restart: unless-stopped
         environment:
             DB_URL: mongodb://storydb:27017/storyservice
