--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         ports:
             - 100:100
         volumes:
-            - ./backend/nginx.conf:/etc/nginx/conf.d/default.conf
+            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - authservice
             - postservice
@@ -18,9 +18,10 @@ services:
         container_name: frontend
         build: ./frontend
         restart: unless-stopped
+        ports:
+            - 4200:4200
         depends_on:
             - nginx
-        network_mode: host
 
     authservice:
         container_name: authservice
