--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,9 @@
 server {
-    listen                  100;
+  
+  listen 100;
+
+  root /var/www/html;
+  index index.html;
   
   location /authenticate {
         proxy_pass http://authservice:3000/api/authenticate;
